# camera-calibration

./: .gitignore  CMakeLists.txt  README.md  input.txt
calibration/: calibration.cpp
data/kinectv2/: info.txt
data/kinectv2_00/: calibration.yaml  config.yaml  info.txt
data/logicool_00/: config.yaml  info.txt
data/pseye_00/: calibration.yaml  config.yaml
include/calibration/: calibration.hpp  loader.hpp  params_struct.hpp
reference/: input.txt
reference/logicool/: calibration.xml  files.txt
reference/logicool/logicool/: logicool.xml
reference/pseye/: camera_pseye.xml  files.txt
reference/pseye2/: camera_pseye.xml
sample/: loader.cpp  main.cpp  monocular.cpp  record_kinectv2.cpp  record_webcam.cpp  stereo.cpp
src/: abst_calibration.cpp  calibration.cpp  monocular_calibration.cpp  stereo_calibration.cpp
test/: main.cpp
